fixed padding on collapse

--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ a[download] {
 form ul *:not(ul div) {
 	color: #9e9e9e !important;	
 }
+.collapsible-body {
+	padding 2px;	
+}
 #download, #font { display: none !important }
 .row { visibility: hidden }
 canvas {
